# Trafford-Online-Sovereign

./: .env.example  .gitignore  LICENSE  LICENSE-LSPL.md  README.md  The "Trafford-Sovereign-OS" Mega-Prompt.md  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml
backend/: Dockerfile  package-lock.json  package.json
backend/src/: index.js
backend/src/__tests__/: api.test.js
backend/src/db/: migrate.js  pool.js  schema.sql
backend/src/middleware/: auth.js
backend/src/routes/: auth.js  deeds.js  governance.js  materials.js  nodes.js  reworks.js  safety.js  service-swap.js  vajra.js
edge-controller/: Cargo.toml
edge-controller/config/: rt-preempt.conf
edge-controller/src/: hub.rs  main.rs
edge-controller/src/tetrad/: enki.rs  hekete.rs  kong.rs  mod.rs  odin.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx  AuthContext.js  api.js  setupTests.js
frontend/src/__tests__/: App.test.jsx  Deeds.test.jsx  GenesisEngine.test.jsx  Governance.test.jsx  JobBoard.test.jsx  LiveSiteStats.test.jsx  Materials.test.jsx  NodeProfile.test.jsx  ReWorks.test.jsx  Safety.test.jsx  TheMandate.test.jsx  api.test.js
frontend/src/components/: Deeds.jsx  GenesisEngine.jsx  Governance.jsx  JobBoard.jsx  LiveSiteStats.jsx  Login.jsx  Materials.jsx  NodeProfile.jsx  ReWorks.jsx  Safety.jsx  TheMandate.jsx
google-apps-script/: AppSheetConnector.gs  SovereignSync.gs
nginx/: nginx.conf
